--- a/app/src/main/res/drawable/toolbar_gradient.xml
+++ b/app/src/main/res/drawable/toolbar_gradient.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
         android:startColor="@color/actionbar_bg"
-        android:endColor="@color/actionbar_bg_dark"
+        android:endColor="@color/actionbar_bg"
         android:angle="45"/>
 </shape>
