--- a/app/src/main/res/layout/number_vertex.xml
+++ b/app/src/main/res/layout/number_vertex.xml
@@ -6,7 +6,7 @@
     <ImageView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:src="@drawable/simple_number_vertex"
+        android:src="@drawable/number_vertex"
         android:id="@+id/vertex_node" >
     </ImageView>
     <TextView
@@ -14,8 +14,8 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:id="@+id/vertex_number"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:textColor="#000"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"/>
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"/>
 </FrameLayout>
