--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,6 +23,70 @@
             android:layout_height="match_parent"
             android:id="@+id/layout_main">
         </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="10dp" >
+            <LinearLayout
+                android:background="@drawable/mode_bar_background"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:layout_width="260dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true" >
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/onModeCreate" >
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/circle_main_interact"
+                        android:layout_gravity="center" />
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/icon_add"
+                        android:layout_gravity="center" />
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:id="@+id/onModeConnect" >
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/circle_main_interact"
+                        android:layout_gravity="center" />
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/icon_connect"
+                        android:layout_gravity="center" />
+                </FrameLayout>
+                <FrameLayout
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:id="@+id/onModeDelete" >
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/circle_main_interact"
+                        android:layout_gravity="center" />
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/icon_delete"
+                        android:layout_gravity="center" />
+                </FrameLayout>
+            </LinearLayout>
+        </RelativeLayout>
         <include layout="@layout/my_actionbar"/>
     </FrameLayout>
     <!-- The navigation drawer -->
