--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,10 +10,9 @@
     <color name="canvas_background">#e3f2fd</color>
     <color name="canvas_background_line">#d2e1ec</color>
     <color name="idle_vertex">#eeeeff</color>
-    <color name="actionbar_bg">#0c66c3</color>
+    <color name="actionbar_bg">#86a8ff</color>
     <color name="actionbar_bg_dark">#060060</color>
     <color name="blue">#aaaaff</color>
-    <color name="navbar_text_color">#1e88e5</color>
     <color name="background_light">#fff</color>
     <color name="background_dark">#000</color>
     <color name="transparent">#0fff</color>
