--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="canvas_background">#e3f2fd</color>
     <color name="canvas_background_line">#d2e1ec</color>
     <color name="idle_vertex">#eeeeff</color>
-    <color name="actionbar_bg">#86a8ff</color>
+    <color name="actionbar_bg">#7597ee</color>
     <color name="actionbar_bg_dark">#060060</color>
     <color name="blue">#aaaaff</color>
     <color name="background_light">#fff</color>
