--- a/app/src/main/res/layout/navbar_list_item.xml
+++ b/app/src/main/res/layout/navbar_list_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="40dp"
     android:background="#0000"
-    android:textColor="@color/material_blue_grey_800"
     android:gravity="center_vertical"
-    android:paddingLeft="20dp" />
+    android:paddingLeft="20dp"
+    android:textColor="@color/material_blue_grey_800" />
