--- a/app/src/main/res/layout/number_vertex.xml
+++ b/app/src/main/res/layout/number_vertex.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
-    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_height="wrap_content">
+
     <ImageView
-        android:layout_height="match_parent"
+        android:id="@+id/vertex_node"
         android:layout_width="match_parent"
-        android:src="@drawable/number_vertex"
-        android:id="@+id/vertex_node" >
-    </ImageView>
+        android:layout_height="match_parent"
+        android:src="@drawable/number_vertex"></ImageView>
+
     <TextView
+        android:id="@+id/vertex_number"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:id="@+id/vertex_number"
-        android:textSize="16sp"
-        android:textColor="#000"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"/>
+        android:layout_marginRight="8dp"
+        android:gravity="center"
+        android:textColor="#000"
+        android:textSize="16sp" />
 </FrameLayout>
