--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -7,42 +7,13 @@
     android:id="@+id/relLay"
     android:background="@drawable/main_bg">
 
-    <Button
-        android:id="@+id/btnNew"
-        android:text="@string/btnNewFile"
-        android:layout_above="@+id/btnOpen"
+    <fragment
+        android:id="@+id/detailFragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        class="com.vlfom.wordgraph.Menu_FragmentList"
+        tools:layout="@layout/fragment_menulist"
         android:layout_centerHorizontal="true"
-        android:clickable="true"
-        android:textSize="18sp"
-        android:padding="10dp"
-        android:layout_marginBottom="2dp"
-        android:background="@drawable/button_menu" />
-
-    <Button
-        android:id="@+id/btnOpen"
-        android:text="@string/btnOpenFile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:clickable="true"
-        android:textSize="18sp"
-        android:padding="10dp"
-        android:background="@drawable/button_menu" />
-
-    <Button
-        android:id="@+id/btnAbout"
-        android:text="@string/btnAbout"
-        android:layout_below="@+id/btnOpen"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:clickable="true"
-        android:textSize="18sp"
-        android:padding="10dp"
-        android:background="@drawable/button_menu"
-        android:layout_marginTop="2dp" />
+        android:layout_centerVertical="true" />
 
 </RelativeLayout>
