--- a/app/src/main/res/layout/fragment_menulist.xml
+++ b/app/src/main/res/layout/fragment_menulist.xml
@@ -3,7 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true">
         <Button
             android:id="@+id/btnNew"
             android:text="@string/btnNewFile"
