--- a/app/src/main/res/drawable-xxhdpi/button_menu.xml
+++ b/app/src/main/res/drawable-xxhdpi/button_menu.xml
@@ -9,8 +9,8 @@
         android:angle="90"
         android:centerX="10%"
         android:startColor="#ddccccee"
-        android:centerColor="#7597ee"
-        android:endColor="#75a9ff"
+        android:centerColor="#dd7597ee"
+        android:endColor="#dd75a9ff"
         android:type="linear"
         />
     <padding
