--- a/app/src/main/res/drawable/mode_bar_cancel.xml
+++ b/app/src/main/res/drawable/mode_bar_cancel.xml
@@ -7,7 +7,7 @@
         android:radius="30dp" />
 
     <solid
-        android:color="#deef"/>
+        android:color="#ceef"/>
     <stroke
         android:width="1dp"
         android:color="#4000" />
