--- a/app/src/main/res/layout/fileopen_layout.xml
+++ b/app/src/main/res/layout/fileopen_layout.xml
@@ -3,14 +3,26 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fileopen_layout"
-    android:background="#aa000000">
+    android:id="@+id/fileopen_layout">
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/mode_bar_cancelfile"
+        android:text="Cancel"
+        android:textColor="#225"
+        android:textSize="18dp"
+        android:gravity="center"
+        android:id="@+id/onModeCancelFile"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/fileopen_popuplist"
-        android:layout_margin="10dp"
-        android:dividerHeight="10dp" />
+        android:dividerHeight="10dp"
+        android:background="#aa000000"
+        android:layout_above="@id/onModeCancelFile"/>
 
 </RelativeLayout>
