--- a/app/src/main/res/layout/fileopen_layout.xml
+++ b/app/src/main/res/layout/fileopen_layout.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/fileopen_layout">
+    android:id="@+id/fileopen_layout"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -21,8 +22,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fileopen_popuplist"
-        android:dividerHeight="10dp"
-        android:background="#aa000000"
-        android:layout_above="@id/onModeCancelFile"/>
+        android:dividerHeight="2dp"
+        android:background="#c000"
+        android:layout_above="@id/onModeCancelFile"
+        android:padding="10dp"/>
 
 </RelativeLayout>
