Added empty nodes

--- a/app/src/main/res/values/navbar_string_list.xml
+++ b/app/src/main/res/values/navbar_string_list.xml
@@ -4,6 +4,7 @@
         <item>New file</item>
         <item>Open file</item>
         <item>Save file</item>
+        <item>Save file as</item>
         <item>Clear field</item>
     </string-array>
 </resources>
