--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,13 +31,13 @@
             android:gravity="center_horizontal">
 
             <FrameLayout
-                android:layout_width="160dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:baselineAligned="false">
 
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="200dp"
                     android:paddingBottom="5dp"
                     android:paddingTop="5dp"
                     android:layout_height="wrap_content"
@@ -64,6 +64,25 @@
                     </FrameLayout>
 
                     <FrameLayout
+                        android:id="@+id/onModeColor"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/circle_main_interact" />
+
+                        <ImageView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/icon_palette" />
+                    </FrameLayout>
+
+                    <FrameLayout
                         android:id="@+id/onModeDelete"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -85,7 +104,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="160dp"
+                    android:layout_width="200dp"
                     android:paddingBottom="5dp"
                     android:paddingTop="5dp"
                     android:layout_height="wrap_content"
