--- a/app/src/main/res/drawable-xxhdpi/button_menu.xml
+++ b/app/src/main/res/drawable-xxhdpi/button_menu.xml
@@ -2,18 +2,7 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners
-        android:radius="2dp"
-        />
-    <gradient
-        android:angle="90"
-        android:centerX="10%"
-
-        android:startColor="#bbaaccee"
-        android:centerColor="#bb00a9ee"
-        android:endColor="#bb75a9ff"
-        android:type="linear"
-        />
+    <solid android:color="#4FFF" />
     <padding
         android:left="0dp"
         android:top="0dp"
@@ -23,9 +12,5 @@
     <size
         android:width="150dp"
         android:height="40dp"
-        />
-    <stroke
-        android:width="1dp"
-        android:color="#ee777777"
         />
 </shape>
