--- a/app/src/main/res/layout/main_fragmentnavbar.xml
+++ b/app/src/main/res/layout/main_fragmentnavbar.xml
@@ -5,6 +5,6 @@
     android:layout_width="200dp"
     android:layout_height="match_parent"
     android:layout_gravity="start"
-    android:background="#cfff"
+    android:background="#efff"
     android:orientation="vertical">
 </LinearLayout>
